fixing page alignment

--- a/client/src/components/homepage/home.css
+++ b/client/src/components/homepage/home.css
@@ -473,7 +473,8 @@
 
     .footer-container .footer-items {
         grid-template-columns: 1fr 1fr 1fr 1fr;
-        padding: 2.1rem;
+        background-color: orange;
+        padding: 1rem 0 0 0 ;
     }
 
     .footer-items .footer-item {
@@ -533,10 +534,12 @@
         display: flex;
         flex-direction: column-reverse;
         margin: 2rem .5rem;
+        padding: 1rem;
     }
 
     .phone-pc-info {
         width: 100%;
+        /* margin: 1rem; */
     }
 
     .phone-pc-img {
@@ -611,12 +614,13 @@
 
     .footer-container .footer-items {
         grid-template-columns: 1fr;
-        padding: 1rem;
+        background-color: orange;
+        padding: 1rem 0 0 0 ;
     }
 
     .footer-items .footer-item {
         width: 100%;
-        /* background-color: blue; */
+        background-color: blue;
         margin-bottom: 1rem;
     }
 
@@ -626,11 +630,13 @@
 
     .section-5 .section-5-content {
         width: 100%;
+        background-color: rgba(0, 0, 0, 0);
         padding-left: .5rem;
     }
 
     .section-5-content .item1 {
         width: 100%;
+        background-color: rgba(0, 0, 0, 0);
     }
 
     .section-5-content .item2 {
