--- a/client/src/components/homepage/navstyle.css
+++ b/client/src/components/homepage/navstyle.css
@@ -111,7 +111,7 @@ header {
     color: #fff;
 }
 
-.container1 .btn-group{
+.container1 .navigationBox{
     display: none;
 }
 
