--- a/client/src/components/products/products.css
+++ b/client/src/components/products/products.css
@@ -39,7 +39,13 @@
 }
 
 .cart .icon{
-  padding: .8rem 1rem;
+  /* padding: .8rem 1rem; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  /* border-radius: 50%; */
   margin: 1rem;
   cursor: pointer;
   border-radius: 10%;
@@ -48,14 +54,19 @@
 }
 
 .cart .icon i{
-  font-size: 1.5rem;
+  font-size: 1rem;
 }
 
 .cart .item-no{
-  font-size: 1rem;
+  font-size: .8rem;
   color: white;
-  padding: .2rem .5rem;
-  border-radius: 10px;
+  /* padding: .3rem .6rem; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
   font-weight: bold;
   background-color: blue;
   position: absolute;
